Fix(Themes/Azu): Fix Azu Theme config files

--- a/Themes/Azu/theme-kitty.conf
+++ b/Themes/Azu/theme-kitty.conf
@@ -1,35 +1,39 @@
-#Colors
-foreground  #
-background  #
+
+# The basic colors
+foreground  #D9E6F2
+background  #09111A
+
+# Cursor colors
+cursor      #D9E6F2
 
 # black
-color0      #
-color8      #
+color0      #000000
+color8      #262626
 
 # red
-color1      #
-color9      #
+color1      #AC6D74
+color9      #D6B8BC
 
 # green
-color2      #
-color10     #
+color2      #74AC6D
+color10     #BCD6B8
 
 # yellow
-color3      #
-color11     #
+color3      #ACA46D
+color11     #D6D3B8
 
 # blue
-color4      #
-color12     #
+color4      #6D74AC
+color12     #B8BCD6
 
 # magenta
-color5      #
-color13     #
+color5      #A46DAC
+color13     #D3B8D6
 
 # cyan
-color6      #
-color14     #
+color6      #6DACA4
+color14     #B8D6D3
 
 # white
-color7      #
-color15     #
+color7      #E6E6E6
+color15     #FFFFFF
