Add(Base2Tone-Evening): Add Base2Tone-Evening-Dark/Light color-schemes

--- a/Themes/0_template/theme-alacritty.toml
+++ b/Themes/0_template/theme-alacritty.toml
@@ -22,3 +22,12 @@ magenta = "#"
 cyan    = "#"
 white   = "#"
 
+[colors.dim]
+black   = "#"
+red     = "#"
+green   = "#"
+yellow  = "#"
+blue    = "#"
+magenta = "#"
+cyan    = "#"
+white   = "#"
