--- a/Themes/Ayaka/theme-alacritty.toml
+++ b/Themes/Ayaka/theme-alacritty.toml
@@ -1,7 +1,8 @@
-
 [colors.primary]
 foreground  =       "#cedaeb"
 background  =       "#36283d"
+
+[colors.cursor]
 cursor      =       "#cedaeb"
 
 [colors.normal]
