--- a/Themes/Base2Tone-Cave-Dark/theme-kitty.conf
+++ b/Themes/Base2Tone-Cave-Dark/theme-kitty.conf
@@ -1,6 +1,9 @@
-#Colors
+# The basic colors
 foreground  #9f999b
 background  #222021
+
+# Cursor colors
+cursor      #996e00
 
 # black
 color0      #222021
@@ -33,3 +36,4 @@ color14     #54ced6
 # white
 color7      #9f999b
 color15     #ffffff
+
