--- a/Themes/Base2Tone-Cave-Light/theme-kitty.conf
+++ b/Themes/Base2Tone-Cave-Light/theme-kitty.conf
@@ -1,6 +1,9 @@
-#Colors
+# The basic colors
 foreground  #cca133
 background  #fbfaf9
+
+# Cursor colors
+cursor      #cca133
 
 # black
 color0      #222021
@@ -33,3 +36,4 @@ color14     #54ced6
 # white
 color7      #9f999b
 color15     #ffffff
+
