--- a/Themes/Base2Tone-Evening-Dark/theme-kitty.conf
+++ b/Themes/Base2Tone-Evening-Dark/theme-kitty.conf
@@ -1,6 +1,9 @@
-#Colors
+# The basic colors
 foreground  #a4a1b5
 background  #2a2734
+
+# Cursor colors
+cursor      #b37537
 
 # black
 color0      #2a2734
@@ -33,3 +36,4 @@ color14     #54ced6
 # white
 color7      #a4a1b5
 color15     #ffffff
+
