--- a/Themes/Base2Tone-Lavender-Dark/theme-alacritty.toml
+++ b/Themes/Base2Tone-Lavender-Dark/theme-alacritty.toml
@@ -1,8 +1,9 @@
-
 [colors.primary]
 foreground  =       "#9992b0"
 background  =       "#201d2a"
-#cursor      =       "#b042ff"
+
+[colors.cursor]
+cursor      =       "#b042ff"
 
 [colors.normal]
 black       =       "#201d2a"
