--- a/Themes/Base2Tone-Cave-Dark/theme-alacritty.toml
+++ b/Themes/Base2Tone-Cave-Dark/theme-alacritty.toml
@@ -1,34 +1,27 @@
 [colors.primary]
-foreground          = "#9f999b"
-background          = "#222021"
+foreground  =       "#9f999b"
+background  =       "#222021"
 
+[colors.cursor]
+cursor      =       "#996e00"
 
 [colors.normal]
-black   = "#222021"
-red     = "#936c7a"
-green   = "#ddaf3c"
-yellow  = "#ffcc4d"
-blue    = "#9c818b"
-magenta = "#c39622"
-cyan    = "#d27998"
-white   = "#9f999b"
+black       =       "#222021"
+red         =       "#936c7a"
+green       =       "#ddaf3c"
+yellow      =       "#ffcc4d"
+blue        =       "#9c818b"
+magenta     =       "#c39622"
+cyan        =       "#d27998"
+white       =       "#9f999b"
 
 [colors.bright]
-black   = "#666666"
-red     = "#ff3334"
-green   = "#9ec400"
-yellow  = "#e7c547"
-blue    = "#7aa6da"
-magenta = "#b77ee0"
-cyan    = "#54ced6"
-white   = "#ffffff"
+black       =       "#666666"
+red         =       "#ff3334"
+green       =       "#9ec400"
+yellow      =       "#e7c547"
+blue        =       "#7aa6da"
+magenta     =       "#b77ee0"
+cyan        =       "#54ced6"
+white       =       "#ffffff"
 
-[colors.dim]
-black   = "#000000"
-red     = "#8c3336"
-green   = "#7a8530"
-yellow  = "#97822e"
-blue    = "#506d8f"
-magenta = "#80638e"
-cyan    = "#497e7a"
-white   = "#9a9a9a"
