--- a/Themes/Base2Tone-Evening-Dark/theme-alacritty.toml
+++ b/Themes/Base2Tone-Evening-Dark/theme-alacritty.toml
@@ -1,33 +1,27 @@
 [colors.primary]
-foreground          = "#a4a1b5"
-background          = "#2a2734"
+foreground  =       "#a4a1b5"
+background  =       "#2a2734"
+
+[colors.cursor]
+cursor      =       "#b37537"
 
 [colors.normal]
-black   = "#2a2734"
-red     = "#8a75f5"
-green   = "#ffb870"
-yellow  = "#ffcc99"
-blue    = "#9a86fd"
-magenta = "#ffa142"
-cyan    = "#afa0fe"
-white   = "#a4a1b5"
+black       =       "#2a2734"
+red         =       "#8a75f5"
+green       =       "#ffb870"
+yellow      =       "#ffcc99"
+blue        =       "#9a86fd"
+magenta     =       "#ffa142"
+cyan        =       "#afa0fe"
+white       =       "#a4a1b5"
 
 [colors.bright]
-black   = "#666666"
-red     = "#ff3334"
-green   = "#9ec400"
-yellow  = "#e7c547"
-blue    = "#7aa6da"
-magenta = "#b77ee0"
-cyan    = "#54ced6"
-white   = "#ffffff"
+black       =       "#666666"
+red         =       "#ff3334"
+green       =       "#9ec400"
+yellow      =       "#e7c547"
+blue        =       "#7aa6da"
+magenta     =       "#b77ee0"
+cyan        =       "#54ced6"
+white       =       "#ffffff"
 
-[colors.dim]
-black   = "#000000"
-red     = "#8c3336"
-green   = "#7a8530"
-yellow  = "#97822e"
-blue    = "#506d8f"
-magenta = "#80638e"
-cyan    = "#497e7a"
-white   = "#9a9a9a"
