--- a/Themes/Base2Tone-Evening-Light/theme-kitty.conf
+++ b/Themes/Base2Tone-Evening-Light/theme-kitty.conf
@@ -1,6 +1,9 @@
-#Colors
+# The basic colors
 foreground  #ffad5c
 background  #fbfaf9
+
+# Cursor colors
+cursor      #ffad5c
 
 # black
 color0      #2a2734
@@ -33,3 +36,4 @@ color14     #54ced6
 # white
 color7      #a4a1b5
 color15     #ffffff
+
